--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@
 html {
   font-size: 62.5%; /* makes 1rem 10px */
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -44,10 +45,6 @@ a {
   position: relative;
   visibility: hidden;
   top: -1rem;
-}
-
-#sections {
-  overflow-x: hidden;
 }
 
 .menu-btn {
